fix: update header z-index

--- a/styles/organisms/header.css
+++ b/styles/organisms/header.css
@@ -3,6 +3,7 @@
   background-color: #05386B;
   border-top: 1.6146rem solid #021E39;
   padding: 3.4024rem 1.5rem 3.3736rem;
+  z-index: 1;
 }
 
 .header {
